metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: bh-admission-metrics
  namespace: bh-admission
spec:
  ports:
  - name: metrics
    port: 80
    targetPort: 2112
  selector:
    name: bh-admission
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bh-admission-metrics
  namespace: bh-admission
spec:
  host: bh-admission-metrics.apps.all.in.one
  port:
    targetPort: metrics
  to:
    kind: Service
    name: bh-admission-metrics
    weight: 100
  wildcardPolicy: None
