deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: namespace-admission
  namespace: namespace-admission
  labels:
    name: namespace-admission
spec:
  ports:
  - name: webhook
    port: 443
    targetPort: 8080
  selector:
    name: namespace-admission
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: namespace-admission
  namespace: namespace-admission
  labels:
    name: namespace-admission
spec:
  replicas: 1
  selector:
    matchLabels:
      name: namespace-admission
  template:
    metadata:
      name: namespace-admission 
      labels:
        name: namespace-admission
    spec:
      containers:
        - name: webhook
          image: image-registry.openshift-image-registry.svc:5000/openshift/namespace-admission:latest
#          image: docker-registry.default.svc:5000/openshift/namespace-admission:latest
#          image: localhost:5000/namespace-admission:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: 50Mi
              cpu: 300m
            requests:
              memory: 50Mi
              cpu: 300m
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
            - name: namespace-admission-config
              mountPath: /etc/webhook/namespace-admission-config
              readOnly: true
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: namespace-admission-certs
        - name: namespace-admission-config
          configMap:
            name: namespace-admission-config
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: namespace-admission
webhooks:
  - name: namespace-admission.cust.local
    clientConfig:
      service:
        name: namespace-admission
        namespace: namespace-admission
        path: "/"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURNRENDQWhpZ0F3SUJBZ0lJZHpWdWx2T0xxQXd3RFFZSktvWklodmNOQVFFTEJRQXdOakVTTUJBR0ExVUUKQ3hNSmIzQmxibk5vYVdaME1TQXdIZ1lEVlFRREV4ZGhaRzFwYmkxcmRXSmxZMjl1Wm1sbkxYTnBaMjVsY2pBZQpGdzB5TURBMU16QXhNVEV3TlRSYUZ3MHpNREExTWpneE1URXdOVFJhTURZeEVqQVFCZ05WQkFzVENXOXdaVzV6CmFHbG1kREVnTUI0R0ExVUVBeE1YWVdSdGFXNHRhM1ZpWldOdmJtWnBaeTF6YVdkdVpYSXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREYzaEVDdmgwYUtwdVZVOEdpYjB2eVIrQm9MWk5lUFdXRgp2UmlzUHJBS0pa [...]
    rules:
      - operations: ["CREATE"]
        apiGroups: ["", "project.openshift.io"]
        apiVersions: ["v1"]
        resources: ["namespaces","projects"]
    failurePolicy: Ignore
